<resources>
    <string name="app_name">Login</string>
    <string name="yourapp">YourApp</string>
    <string name="tag_line">tag line</string>
    <string name="Login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="createAccount">Create Account</string>
</resources>