<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageHeader"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/headerbackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/Login"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:includeFontPadding="false"
                    />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:id="@+id/viewSupporter"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/login_background"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewSupporter">

                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textWelcome"
                    android:layout_marginTop="40dp"
                    android:hint="@string/email"
                    android:background="@null"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15dp"
                    android:imeOptions="actionNext"
                    tools:ignore="Autofill"
                    />
                <View
                    android:id="@+id/viewDividerFromEmail"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorTextHint"
                    app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                        />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_email"
                    android:tint="@color/colorTextHint"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@+id/inputEmail"
                    app:layout_constraintStart_toStartOf="@+id/inputEmail"
                    />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="60dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                    tools:ignore="Autofill"
                    tools:layout_editor_absoluteX="40dp" />
                <View
                    android:id="@+id/viewDividerFromPassword"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorTextHint"
                    app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_lock"
                    android:tint="@color/colorTextHint"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@+id/inputPassword"
                    app:layout_constraintStart_toStartOf="@+id/inputPassword"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/viewDividerFromPassword"
                    android:background="@drawable/first_button_background"
                    android:text="@string/Login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="13dp"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgetPassword"
                    android:textSize="13dp"
                    android:text="@string/forgetPassword"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/createAccount"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
                    android:background="@drawable/second_button_background"
                    android:text="@string/createAccount"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>